...
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:tint="@color/grey_100"
...
